@@ -4164,6 +4164,10 @@ extern mp_size_t                     dc_bdiv_q_threshold;
 #define DC_BDIV_QR_THRESHOLD         dc_bdiv_qr_threshold
 extern mp_size_t                     dc_bdiv_qr_threshold;
 
+#undef  INV_NEWTON_THRESHOLD
+#define INV_NEWTON_THRESHOLD         inv_newton_threshold
+extern mp_size_t                     inv_newton_threshold;
+
 #undef  BINV_NEWTON_THRESHOLD
 #define BINV_NEWTON_THRESHOLD        binv_newton_threshold
 extern mp_size_t                     binv_newton_threshold;
