@@ -123,7 +123,7 @@ DISTCLEANFILES = sqr_basecase.c  $(MANY_DISTCLEAN)
 
 TUNE_MPN_SRCS = $(TUNE_MPN_SRCS_BASIC) divrem_1.c mod_1.c
 TUNE_MPN_SRCS_BASIC = dcpi1_div_qr.c dcpi1_divappr_q.c dcpi1_bdiv_qr.c dcpi1_bdiv_q.c	\
-  binvert.c divrem_2.c gcd.c gcdext.c get_str.c				\
+  invert.c binvert.c divrem_2.c gcd.c gcdext.c get_str.c		\
   set_str.c matrix22_mul.c hgcd.c mul_n.c sqr_n.c			\
   mullo_n.c mul_fft.c mul.c tdiv_qr.c mulmod_bnm1.c			\
   toom22_mul.c toom2_sqr.c toom33_mul.c toom3_sqr.c toom44_mul.c toom4_sqr.c
